# faceit.py

./: LICENSE  Pipfile  pyproject.toml
.github/workflows/: release.yml
faceit/: __init__.py  client.py  errors.py  game.py  http.py  match.py  organizer.py  player.py
