[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faceit.py"
authors = [
    {name = "PaxxPatriot"},
]
description = "A Python wrapper for the Faceit API"
readme = "README.md"
keywords = ["faceit", "Counter-Strike 2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: aiohttp",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = [
    "aiohttp",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/PaxxPatriot/faceit.py.git"
Issues = "https://github.com/PaxxPatriot/faceit.py/issues"

[tool.setuptools]
packages = ["faceit"]

[tool.setuptools.dynamic]
version = {attr = "faceit.__version__"}

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125